--- a/ecu-uds/Cargo.toml
+++ b/ecu-uds/Cargo.toml
@@ -28,7 +28,7 @@ bin_file = "0.1"
 crc = "3.2"
 
 [features]
-default = ["std2006", "std2013", "std2020"]
+default = ["std2020"]
 
 std2006 = []
 std2013 = []
