--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ lazy_static = "1"
 half = "2"
 bitflags = "2"
 bitfield-struct = "0.8"
-isotp-rs = { version = "0.1.8-alpha1" }
+isotp-rs = { path = "../isotp-rs" }
 
 # dev dependencies
 anyhow = "1"
