--- a/ecu-uds/Cargo.toml
+++ b/ecu-uds/Cargo.toml
@@ -24,8 +24,7 @@ anyhow = { workspace = true }
 bin_file = "0.1"
 crc = "3.2"
 
-zlgcan_common = { path = "../../zlgcan-driver-rs/zlgcan-common" }
-zlgcan_driver = { path = "../../zlgcan-driver-rs/zlgcan-driver" }
+zlgcan = { path = "../../rs-can/zlgcan" }
 
 [features]
 default = ["std2020"]
