--- a/iso13400-2/Cargo.toml
+++ b/iso13400-2/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 edition = "2021"
 license = "GPL-3.0"
 authors = ["zhuyu <zhuyu4839@gmail.com>"]
-description = "A ECU-UDS protocol."
+description = "A ISO 13400-2 protocol."
 homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
 repository = "https://github.com/zhuyu4839/ecu-proto-rs"
 
