--- a/iso14229-1/Cargo.toml
+++ b/iso14229-1/Cargo.toml
@@ -2,6 +2,11 @@
 name = "iso14229-1"
 version = "0.0.0"
 edition = "2021"
+license = "GPL-3.0"
+authors = ["zhuyu <zhuyu4839@gmail.com>"]
+description = "A ISO 14229-1 protocol."
+homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
+repository = "https://github.com/zhuyu4839/ecu-proto-rs"
 
 [dependencies]
 log = { workspace = true }
