move isotp-rs to iso15765-2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ resolver = "2"
 #quote = "1.0"
 #proc-macro2 = "1.0"
 log = "0.4"
-thiserror = "1"
+thiserror = "2"
 lazy_static = "1"
 #byteorder = "1"
 half = "2"
@@ -23,7 +23,7 @@ bitflags = "2"
 bitfield-struct = "0.9"
 derive-getters = "0"
 hex = "0.4"
-isotp-rs = { version = "0.2.1" }
+tokio = { version = "1" }
 iso13400-2 = { path = "crates/iso13400-2" }
 iso14229-1 = { path = "crates/iso14229-1" }
 iso15765-2 = { path = "crates/iso15765-2" }
