--- a/crates/iso14229-1/Cargo.toml
+++ b/crates/iso14229-1/Cargo.toml
@@ -7,6 +7,12 @@ authors = ["zhuyu <zhuyu4839@gmail.com>"]
 description = "A ISO 14229-1 protocol."
 homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
 repository = "https://github.com/zhuyu4839/ecu-proto-rs"
+keywords = [
+    "automotive",
+    "UDS",
+    "ISO14229",
+    "DoCAN"
+]
 
 [dependencies]
 log = { workspace = true }
