--- a/crates/iso13400-2/Cargo.toml
+++ b/crates/iso13400-2/Cargo.toml
@@ -1,12 +1,18 @@
 [package]
 name = "iso13400-2"
-version = "0.1.0-alpha0"
+version = "0.1.0-alpha1"
 edition = "2021"
 license = "GPL-3.0"
 authors = ["zhuyu <zhuyu4839@gmail.com>"]
 description = "A ISO 13400-2 protocol."
 homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
 repository = "https://github.com/zhuyu4839/ecu-proto-rs"
+keywords = [
+    "automotive",
+    "UDS",
+    "ISO13400",
+    "DoIP"
+]
 
 [dependencies]
 log = { workspace = true }
