fix zlgcan driver on linux

--- a/crates/drivers/nican/Cargo.toml
+++ b/crates/drivers/nican/Cargo.toml
@@ -13,7 +13,7 @@ log = { workspace = true }
 thiserror = { workspace = true }
 iso15765-2 = { workspace = true }
 iso14229-1 = { workspace = true }
-rs-can = { version = "0.1.0-alpha2", path = "../rs-can" }
+rs-can = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
