--- a/crates/protocols/doip/Cargo.toml
+++ b/crates/protocols/doip/Cargo.toml
@@ -2,7 +2,6 @@
 name = "doip"
 version = "0.0.0"
 edition = "2021"
-license = "GPL-3.0"
 authors = ["zhuyu <zhuyu4839@gmail.com>"]
 description = "A DoIP protocol."
 homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
@@ -11,6 +10,12 @@ keywords = [
     "automotive",
     "UDS",
     "DoIP"
+]
+
+[licenses]
+allow = [
+    "GPL-3.0",
+    "MIT",
 ]
 
 [dependencies]
