--- a/crates/drivers/zlgcan/Cargo.toml
+++ b/crates/drivers/zlgcan/Cargo.toml
@@ -1,12 +1,17 @@
 [package]
 name = "zlgcan"
-version = "0.1.0-alpha9"
+version = "0.1.0-beta0"
 edition = "2021"
 authors = ["zhuyu <zhuyu4839@gmail.com>"]
-license = "GPL-3.0"
 description = "A Cross-platform ZLGCAN driver."
-homepage = "https://github.com/zhuyu4839/rust-can"
-repository = "https://github.com/zhuyu4839/rust-can"
+homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
+repository = "https://github.com/zhuyu4839/ecu-proto-rs"
+
+[licenses]
+allow = [
+    "GPL-3.0",
+    "MIT",
+]
 
 [dependencies]
 log = { workspace = true }
