--- a/crates/protocols/docan/Cargo.toml
+++ b/crates/protocols/docan/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
 name = "docan"
-version = "0.1.0-alpha0"
+version = "0.1.0-alpha1"
 edition = "2021"
-license = "GPL-3.0"
 authors = ["zhuyu <zhuyu4839@gmail.com>"]
 description = "A DoCAN protocol."
 homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
@@ -11,6 +10,12 @@ keywords = [
     "automotive",
     "UDS",
     "DoCAN"
+]
+
+[licenses]
+allow = [
+    "GPL-3.0",
+    "MIT",
 ]
 
 [dependencies]
