--- a/crates/protocols/iso13400-2/Cargo.toml
+++ b/crates/protocols/iso13400-2/Cargo.toml
@@ -2,7 +2,6 @@
 name = "iso13400-2"
 version = "0.1.0-alpha1"
 edition = "2021"
-license = "GPL-3.0"
 authors = ["zhuyu <zhuyu4839@gmail.com>"]
 description = "A ISO 13400-2 protocol."
 homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
@@ -12,6 +11,12 @@ keywords = [
     "UDS",
     "ISO13400",
     "DoIP"
+]
+
+[licenses]
+allow = [
+    "GPL-3.0",
+    "MIT",
 ]
 
 [dependencies]
