--- a/crates/protocols/iso14229-1/Cargo.toml
+++ b/crates/protocols/iso14229-1/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
 name = "iso14229-1"
-version = "0.1.0-alpha0"
+version = "0.1.0-alpha1"
 edition = "2021"
-license = "GPL-3.0"
 authors = ["zhuyu <zhuyu4839@gmail.com>"]
 description = "A ISO 14229-1 protocol."
 homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
@@ -12,6 +11,12 @@ keywords = [
     "UDS",
     "ISO14229",
     "DoCAN"
+]
+
+[licenses]
+allow = [
+    "GPL-3.0",
+    "MIT",
 ]
 
 [dependencies]
