--- a/crates/protocols/iso15765-2/Cargo.toml
+++ b/crates/protocols/iso15765-2/Cargo.toml
@@ -2,6 +2,7 @@
 name = "iso15765-2"
 version = "0.1.0-alpha1"
 edition = "2021"
+license = "MIT OR GPL-3.0"
 authors = ["zhuyu <zhuyu4839@gmail.com>"]
 description = "A ISO 15765-2 protocol."
 homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
@@ -10,12 +11,6 @@ keywords = [
     "automotive",
     "UDS",
     "ISO15765"
-]
-
-[licenses]
-allow = [
-    "GPL-3.0",
-    "MIT",
 ]
 
 [dependencies]
