--- a/crates/protocols/iso14229-1/Cargo.toml
+++ b/crates/protocols/iso14229-1/Cargo.toml
@@ -2,6 +2,7 @@
 name = "iso14229-1"
 version = "0.1.0-alpha1"
 edition = "2021"
+license = "MIT OR GPL-3.0"
 authors = ["zhuyu <zhuyu4839@gmail.com>"]
 description = "A ISO 14229-1 protocol."
 homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
@@ -11,12 +12,6 @@ keywords = [
     "UDS",
     "ISO14229",
     "DoCAN"
-]
-
-[licenses]
-allow = [
-    "GPL-3.0",
-    "MIT",
 ]
 
 [dependencies]
