add winapi dependency for nican for fixing build

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [
-#    "crates/drivers/nican",
+    "crates/drivers/nican",
     "crates/drivers/rs-can",
     "crates/drivers/zlgcan",
 
