--- a/crates/drivers/nican/Cargo.toml
+++ b/crates/drivers/nican/Cargo.toml
@@ -11,13 +11,13 @@ repository = "https://github.com/zhuyu4839/ecu-proto-rs"
 [dependencies]
 log = { workspace = true }
 thiserror = { workspace = true }
-iso15765-2 = { workspace = true }
-iso14229-1 = { workspace = true }
+winapi = { version = "0.3", features = ["errhandlingapi", "libloaderapi", "winnt", ] }
 rs-can = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
 docan = { workspace = true }
+iso14229-1 = { workspace = true }
 
-[build-dependencies]
-bindgen = "0.70"
+#[build-dependencies]
+#bindgen = "0.70"
