add socketcan driver

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
-    "crates/drivers/nican",
+#    "crates/drivers/nican",
     "crates/drivers/rs-can",
+    "crates/drivers/socan",
     "crates/drivers/zlgcan",
 
     "crates/protocols/docan",
