--- a/crates/drivers/socan/Cargo.toml
+++ b/crates/drivers/socan/Cargo.toml
@@ -1,26 +1,25 @@
 [package]
-name = "zlgcan"
-version = "0.1.0-beta1"
+name = "socan"
+version = "0.1.0"
 edition = "2021"
 license = "MIT OR GPL-3.0"
 authors = ["zhuyu <zhuyu4839@gmail.com>"]
-description = "A Cross-platform ZLGCAN driver."
+description = "SocketCAN driver with UDS protocol."
 homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
 repository = "https://github.com/zhuyu4839/ecu-proto-rs"
 
+keywords = [
+    "SocketCAN",
+    "UDS"
+]
+
 [dependencies]
 log = { workspace = true }
-thiserror = { workspace = true }
-serde = { workspace = true }
-serde_yaml = { workspace = true }
-dotenvy = { workspace = true }
-dlopen2 = { workspace = true }
+libc = "0.2"
+nix = { version="0.29", features = ["poll", "process", "net"] }
 rs-can = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
-hex = { workspace = true }
-bin_file = { workspace = true }
-crc = { workspace = true }
 iso14229-1 = { workspace = true }
 docan = { workspace = true }
