--- a/crates/protocols/doip/Cargo.toml
+++ b/crates/protocols/doip/Cargo.toml
@@ -18,6 +18,7 @@ log = { workspace = true }
 thiserror = { workspace = true }
 derive-getters = { workspace = true }
 hex = { workspace = true }
+lazy_static = { workspace = true }
 iso13400-2 = { workspace = true }
 iso14229-1 = { workspace = true }
 
