--- a/iso13400-2/Cargo.toml
+++ b/iso13400-2/Cargo.toml
@@ -5,8 +5,8 @@ edition.workspace = true
 license.workspace = true
 authors.workspace = true
 description = "A ISO 13400-2 protocol."
-homepage = "https://github.com/zhuyu4839/ecu-proto-rs"
-repository = "https://github.com/zhuyu4839/ecu-proto-rs"
+homepage = "https://github.com/zhuyu4839/ecu-proto-rs/tree/develop/iso13400-2"
+repository.workspace = true
 keywords = [
     "automotive",
     "UDS",
