--- a/iso15765-2/Cargo.toml
+++ b/iso15765-2/Cargo.toml
@@ -5,8 +5,8 @@ edition.workspace = true
 license.workspace = true
 authors.workspace = true
 description = "ISO-TP trait define."
-homepage = "https://github.com/zhuyu4839/iso15765-2"
-repository = "https://github.com/zhuyu4839/iso15765-2"
+homepage = "https://github.com/zhuyu4839/ecu-proto-rs/tree/develop/is15765-2"
+repository.workspace = true
 keywords = [
     "automotive",
     "UDS",
